test: update ProjectServiceTest after i18n — add message key verification, argThat assertions and thenAnswer for create